Hox chap 2 first half
Checking the look of equations

--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,7 @@ bookdown::gitbook:
   split_by: chapter
   config:
     toc:
+      toc_depth: 3
       collapse: section
       before: |
         <li><a href="./">Vol. 5: Multilevel Models</a></li>
