--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
 book_filename: eBook_install
 repo: http://github.com/cehs-research/eBook_multilevel/
 output_dir: "docs"
-new_session: yes
+new_session: no
 delete_merged_file: true
