working on image links

--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,7 @@
 bookdown::gitbook:
   css: [style.css, heading.css]
   split_by: chapter
-  split_bib: false
+  split_bib: chapter
   config:
     toc:
       toc_depth: 3
