update gee plotting

--- a/_output.yml
+++ b/_output.yml
@@ -6,6 +6,7 @@ bookdown::gitbook:
     toc:
       toc_depth: 3
       collapse: section
+      scroll_highlight: true
       before: |
         <li><a href="./">Vol. 5: Multilevel Models</a></li>
       after: |
